# ros2-humble-env

./: .codecov.yml  .editorconfig  .env.agixt.example  .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .swcrc  ARIA_AUDIT_REPORT.md  ARIA_MANIFEST.yaml  ARIA_TASK_EXTRACTION_SUMMARY.md  ARIA_TASK_SPECS.yaml  BUILDKIT_STARTER_SPEC.md  CONFIGURATION_DOMAIN_IMPLEMENTATION_SUMMARY.md  CONFIG_AUDIT_SUMMARY.yaml  CONTRIBUTING.md  DEPENDENCY_VALIDATION_REPORT.yaml  DOMAIN_ANALYSIS_COMPLETE.json  EDGE_DEPLOYMENT.md  EDGE_QUICKSTART.md  FINAL_VERIFICATION_REPORT.md  HASHES.txt  L10_STATE_STORAGE_IMPLEMENTATION.md  MANUS_ARIA_ORCHESTRATOR.md  Makefile  P0-007-IMPLEMENTATION-SUMMARY.md  P0_EXECUTION_SUMMARY.txt  P1-005-CODE-CHANGES.md  P1-005-IMPLEMENTATION-SUMMARY.md  P1-008-009-COMPLETION-SUMMARY.md  P1-011-IMPLEMENTATION-SUMMARY.md  P2-012-IMPLEMENTATION-SUMMARY.md  QUICK-START-OPEN-LOVABLE.md  README.md  SECURITY-AUDIT-REPORT.md  SECURITY.md  VERIFICATION-P1-012-P1-013.sh  (+22 more)
.aria/: ARIA_TASK_EXTRACTION_COMPLETE.txt  ARIA_TASK_REFERENCE.md  CROSS-ANALYSIS-SUMMARY.md  FINAL-IMPLEMENTATION-REPORT-2026-01-10.yaml  IMPLEMENTATION-SYNTHESIS-2026-01-10.yaml  P0-VERIFICATION-REPORT.yaml  P1-VERIFICATION-REPORT.yaml  P1_TASKS.yaml  WAVE3-CROSS-ANALYSIS.yaml  WAVE3-EXECUTIVE-SUMMARY.md  audit-domain-1-host-os.yaml  cross-analysis-synthesis.yaml
.claude/: AGENT.md  CLAUDE.md  INDEX.md  RULES.md  SKILL.md  mcp-servers.json  settings.json  settings.local.json.example
.claude-plugin/: plugin.json
.claude/agents/: architect-agent.md  config-consistency-agent.md  coordinator.md  cross-analysis-agent.md  devops-agent.md  docs-agent.md  identity-agent.md  kubernetes-agent.md  migration-agent.md  nix-agent.md  pre-verify-agent.md  robotics-agent.md  security-agent.md  test-runner-agent.md
.claude/commands/: aria-audit-agents.md  aria-audit-ci.md  aria-audit-nix.md  aria-audit.md  aria-scan.md  aria-tasks.md  build.md  flake-check.md  test.md  update-deps.md
.claude/config/: claude-code-router.template.json  env.template  models.json  schema.json
.claude/hooks/: session-start.sh
.claude/policies/: configuration.rego  consistency.rego
.claude/prompts/: README.md  aria-orchestrator.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/docs/: self-hosted-runner-setup.md  testing-strategy.md
.github/workflows/: agixt-test.yml  benchmarks.yml  bootstrap-test.yml  ci.yml  component-verification.yml  config-validation.yml  e2e-validation.yml  editorconfig.yml  eval-gate.yml  flakehub-publish-tagged.yml  localai-test.yml  opa-policy-gate.yml  realtime-latency.yml  release.yml  sbom.yml  security.yml  shellcheck.yml  test-bootstrap.yml  verify-ai-tools.yml  wsl2-build.yml
agents/: index.js
config/agentgateway/: README.md  config.yaml
config/agixt/: sandbox-config.yaml
config/alertmanager/: config.yml
config/bytebase/: project.yaml
config/dds/: realtime-qos.xml
config/dockerfiles/: Dockerfile.open-lovable
config/keycloak/: kong-client.json  vault-client.json
config/kong/: oauth2-plugin.yaml
config/mesh/: service-routes.yaml
config/nats/: README.md  jetstream.conf  nats.conf
config/prometheus/: prometheus.yml
config/schemas/: aria-manifest.schema.json
config/step-ca/: .gitignore  QUICKSTART.md  (+4 more)
data/: README.md  schema.sql
docker/: docker-compose.agixt.yml  docker-compose.automation.yml  docker-compose.bytebase.yml  docker-compose.caching.yml  docker-compose.holochain.yml  docker-compose.identity.yml  docker-compose.localai.yml  docker-compose.messaging.yml  docker-compose.observability.yml  docker-compose.temporal.yml
docs/: BRANCH-PROTECTION.md  BYTEBASE-SETUP.md  CONFLICTS.md  DISTRIBUTED-TRACING.md  GENAI_TOOLBOX_INSTALL.md  GETTING_STARTED.md  GITHUB-RESOURCES.md  HOLOCHAIN-DEPLOYMENT.md  HOLOCHAIN-DNA.html  HOLOCHAIN-ZOMES.md  INFERENCE_SETUP.md  KATA_CONTAINERS_INSTALL.md  LOCALAI-MODELS.md  MINDSDB_QUICKSTART.md  MTLS-IMPLEMENTATION-CHECKLIST.md  MTLS_SETUP.md  NIX_FLAKE_MODULARIZATION.md  NODEJS-AGENTS.md  OBSERVABILITY-QUICK-START.md  P0-TASK-SPECIFICATIONS.yaml  P1-008-009-IMPLEMENTATION.md  P2-001-SANDBOX-INTEGRATION.md  P2-012-OPEN-LOVABLE-INTEGRATION.md  P3-003-NEO4J-IMPLEMENTATION.md  PHASE3-LAZYVIM-DEPS.md  PYTHON-ENVIRONMENTS.md  QUANTUM_AGENTICS_RD.md  README.md  ROS2_STATE_PACKAGES.md  Ref_NixOS_ Pixi_Configs.md  SANDBOX_RUNTIME_INSTALL.md  TASK_GRAPH_EXECUTION_PLAN.md  TOOLING-ANALYSIS.md  TROUBLESHOOTING.md  VCACHE-SETUP.md  WSL2_BUILD_PIPELINE.md  arm64-deployment.md  docker-compose.md  index.md  neo4j-quick-reference.md  (+2 more)
infrastructure/: README.md
lib/: default.nix  system.nix
manifests/: README.md  build_phases.json  feature_flags.yaml  stack.yaml
manifests/holochain/dnas/aria/zomes/logging/: Cargo.toml
manifests/holochain/dnas/aria/zomes/logging/src/: lib.rs
manifests/holochain/dnas/aria/zomes/storage/: Cargo.toml
manifests/holochain/dnas/aria/zomes/storage/src/: lib.rs
rust/: Cargo.toml
rust/agixt-bridge/: Cargo.toml
rust/agixt-bridge/examples/: basic_chat.rs  robot_commands.rs
rust/agixt-bridge/src/: client.rs  commands.rs  config.rs  lib.rs  main.rs
scripts/: README-EDGE.md  analyze-dependencies.py  analyze-workflows.py  build-frontend.sh  deploy-edge.sh  deploy-observability.sh  download-models.sh  generate-service-certs.sh  generate-verification.py  health-check.sh  init-jetstream.sh  init-multi-db.sh  init-step-ca.sh  install-all.sh  install-argocd.sh  isolate-cpu.sh  populate-config-db.py  populate-config-db.sh  query-config-db.py  query-config-db.sh  requirements.txt  ros2-version  rotate-certs.sh  sandbox-agent.sh  sandbox-wrapper.sh  setup-argo-workflows.sh  setup-cert-rotation-cron.sh  validate-e2e.sh  validate-manifest.py  verify-argo-workflows.sh  verify-edge.sh  verify-jetstream.sh  verify-mindsdb.sh  verify-mtls-setup.sh  verify-observability.sh  verify-open-lovable.sh  verify-state-storage.sh
(+205 files in other folders)
