[workspace]
resolver = "2"
members = [
    "agixt-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["FlexNetOS"]
repository = "https://github.com/FlexNetOS/ros2-humble-env"

[workspace.dependencies]
# AGiXT SDK
agixt_sdk = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1.4", features = ["v4"] }

# Time
chrono = "0.4"
