[workspace]
resolver = "2"
members = [
    "agixt-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["FlexNetOS"]
repository = "https://github.com/FlexNetOS/ros2-humble-env"

[workspace.dependencies]
# AGiXT SDK
agixt_sdk = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1.4", features = ["v4"] }

# Time
chrono = "0.4"

# Agent Runtime - Rust Orchestration (BUILDKIT_STARTER_SPEC.md Layer 7)
# P1: arkflow - Rust streaming orchestration runtime
# See: https://github.com/arkflow-rs/arkflow
# arkflow = { git = "https://github.com/arkflow-rs/arkflow", branch = "main" }

# Tool Execution - Rust utilities (BUILDKIT_STARTER_SPEC.md Layer 8)
# P2: midstream - Streaming response analysis
# midstream = { git = "https://github.com/ruvnet/midstream", branch = "main" }
# P2: ruv-fann - Fast neural network utility
# ruv-fann = { git = "https://github.com/ruvnet/ruv-FANN", branch = "main" }
# P2: sublinear-time-solver - Fast solver tool
# sublinear-time-solver = { git = "https://github.com/ruvnet/sublinear-time-solver", branch = "main" }
