[package]
name = "agixt-bridge"
version = "0.1.0"
edition = "2021"
description = "ROS2-AGiXT bridge for natural language robot control"
license = "MIT"
authors = ["FlexNetOS"]
repository = "https://github.com/FlexNetOS/ros2-humble-env"

[dependencies]
# AGiXT Rust SDK (Alpha - v0.1.0)
# https://github.com/AGiXT/rust-sdk
# NOTE: Package is named agixt-sdk on crates.io (hyphen, not underscore)
agixt-sdk = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for LocalAI fallback
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID generation
uuid = { version = "1.4", features = ["v4"] }

# Time handling
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = []
# Enable ROS2 bindings (requires ros2_rust)
ros2 = []

[[bin]]
name = "agixt-bridge"
path = "src/main.rs"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[[example]]
name = "robot_commands"
path = "examples/robot_commands.rs"
